Basic styling of colours, layout, typography and animations for the temporary landing page.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,14 +3,18 @@
  * All rights reserved.                         *
  ************************************************/
 
-@font-face {
-	font-family: 'Aspekta';
-	src: url('./assets/fonts/aspekta.woff2') format(woff2);
-	font-weight: 100 900;
-	font-style: normal;
-	font-display: swap;
-}
-
 html {
-	font-family: 'Aspekta', sans-serif;
+	height: 100%;
+	
+	body {
+		height: 100%;
+		width: 100%;
+		
+		margin: 0;
+		padding: 1rem;
+		
+		h1, h2, h3, h4, h5, h6, p {
+			margin: 0;
+		}
+	}
 }
