--- a/styles/typography.css
+++ b/styles/typography.css
@@ -15,15 +15,33 @@ html {
 	font-family: 'Aspekta', sans-serif;
 	
 	font-size: 14px;
-	text-transform: uppercase;
+	
+	h1, h2, h3, h4, h5, h6, p {
+		margin: 0;
+	}
 	
 	h1, h2, h3, h4, h5, h6, a {
 		font-weight: 650;
 		font-size: 1rem;
+		text-transform: uppercase;
 	}
 	
 	p {
-		font-weight: 520;
+		font-weight: 500;
 		max-width: 30rem;
+		
+		line-height: 1;
+		
+		text-align: justify;
+		hyphens: auto;
+		
+		&:not(:last-of-type) {
+			margin-bottom: 1rem;
+		}
+	}
+	
+	a {
+		text-decoration: none;
+		font-style: normal;
 	}
 }
