Desktop and mobile support for the overall website layout.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,48 +3,74 @@
  * All rights reserved.                         *
  ************************************************/
 
+:root {
+	--page-padding: 1rem;
+}
+
 html {
 	height: 100%;
 	
 	body {
 		height: 100%;
-		width: 100%;
 		
 		box-sizing: border-box;
-		
 		margin: 0;
-		padding: 1rem;
+		padding: var(--page-padding);
 		
 		display: grid;
 		grid-template-columns: auto auto;
 		grid-template-rows: auto auto;
 		justify-content: space-between;
 		align-content: space-between;
+		justify-items: end;
+		column-gap: 2rem;
 		
 		main {
-			max-width: 20rem;
+			max-width: 25rem;
+		}
+		
+		nav, address {
+			position: sticky;
+			right: 0;
+			grid-column: 2;
 			
-			grid-column: 1;
-			grid-row: 1 / span 2;
+			height: fit-content;
+			
+			display: grid;
+			
+			column-gap: .5rem;
+			row-gap: .5rem;
 		}
 		
 		nav {
+			top: var(--page-padding);
 			grid-row: 1;
 		}
 		
 		address {
+			bottom: var(--page-padding);
 			grid-row: 2;
-			align-content: end;
-			align-self: end;
 		}
+	}
+}
+
+@media (min-width: 601px) {
+	address, nav {
+		grid-auto-flow: column;
+		grid-auto-columns: auto;
+	}
+}
+
+@media (max-width: 600px) {
+	address, nav {
+		grid-auto-flow: row;
+		grid-auto-rows: auto;
 		
-		nav, address {
-			display: flex;
-			
-			grid-column: 2;
-			column-gap: .5rem;
-			justify-content: end;
-			height: fit-content;
+		justify-items: end;
+		
+		a {
+			writing-mode: sideways-lr;
+			rotate: 180deg;
 		}
 	}
 }
