Added nicer fallback fonts to the website.

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -12,7 +12,7 @@
 }
 
 html {
-	font-family: 'Aspekta', sans-serif;
+	font-family: 'Aspekta', system-ui, ui-sans-serif, sans-serif;
 	
 	font-size: 14px;
 	
