--- a/styles/typography.css
+++ b/styles/typography.css
@@ -24,7 +24,11 @@ html {
 		margin: 0;
 	}
 	
-	h2, h3, h4, h5, h6 {
+	h2 {
+		margin: 2em 0 0 0;
+	}
+	
+	h3, h4, h5, h6 {
 		margin: 1em 0 0 0;
 	}
 	
